# scribpy

./: .gitignore  .gitlab-ci.yml  404.html  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  cli_demo.py  demo.py  demo1.py  demo_API.py  demo_report.py  index.html  main.py  mkdocs.yml  pyproject.toml  setup.cfg  sitemap.xml
.claude/: settings.json  settings.local.json
.github/workflows/: ci.yml  docs.yml  publish.yml
architecture/: index.html
architecture/assembly-pipeline/: index.html
architecture/diagnostics/: index.html
architecture/diagram-renderers/: index.html
architecture/domain-model/: index.html
cli/: index.html
cli/build-export/: index.html
cli/demo/: index.html
cli/project-creation/: index.html
cli/validation/: index.html
demo/: README.md  scribpy.toml
demo/doc/: index.md
demo/theme/: demo.css
demo_assets/: document.md  style.css
demo_output/: basic_report.md  numbered_report.md  toc_report.md
doc/: ADR-001-deleguer-numbering-markdown-a-mkforge.md  ADR-002-toc-scribpy.md  ADR-003-html-export.md  ADR-004-mkdocs-export.md  ADR-004-validation-projet.md  ADR-005-plantuml-render-providers.md  ADR-006-mermaid-cli-renderer.md  ADR-007-cli-click.md  ADR-008-mkdocs-material-site.md  DEVELOPMENT_CHECKS.md  FUNCTIONAL_CHAINS.md  RELEASE_AND_PIPELINES.md  SDD.md  SRS-documentation-site.md  SRS-mkdocs-export.md  SRS-validation-report.md  TODO.md  architecture-core.md  index.md
doc/adr/: ADR-0001-phase-2-project-context-chain.md  ADR-0002-phase-3-parse-extract-document-semantics.md  ADR-0003-phase-4-lint-first-user-value.md  ADR-0004-result-pipeline-functional-chains.md  ADR-0005-phase-5-first-build-artifact-markdown.md  ADR-0006-phase-6-transform-pipeline.md  ADR-0007-phase-7-html-builder-and-assets.md  ADR-0008-report-generator.md
doc/user-manual/: cli-reference.md  cli.md  configuration.md  extensions.md  getting-started.md  markdown-guide.md  pipelines.md  public-classes.md  python-api-reference.md  python-api.md  report-generator.md
docs/: index.md
docs/architecture/: assembly-pipeline.md  diagnostics.md  diagram-renderers.md  domain-model.md  index.md
docs/cli/: build-export.md  demo.md  index.md  project-creation.md  validation.md
docs/getting-started/: concepts.md  installation.md
docs/guides/: outputs.md  recipes.md  troubleshooting.md
docs/init/: 01-SRS-scribpy.md  02-conception-scribpy.md  03-ADR-001-rendu-diagrammes.md  03b-ADR-002-double-mode-diagrammes.md  04-plan-de-bataille-scribpy.md  05-analyse-maintenabilite-scribpy.md
docs/notes-project/: diagrams.md  folder-manifests.md  index.md  links-and-images.md  markdown-sources.md  root-manifest.md
docs/python-api/: demo.md  end-user.md  extensions.md  index.md
docs/reference/: cli.md  diagnostics.md  manifests.md  python-api.md
examples/: python-handbook.py
getting-started/concepts/: index.html
getting-started/installation/: index.html
guides/outputs/: index.html
guides/recipes/: index.html
guides/troubleshooting/: index.html
notes-project/: index.html
notes-project/diagrams/: index.html
notes-project/folder-manifests/: index.html
notes-project/links-and-images/: index.html
notes-project/markdown-sources/: index.html
notes-project/root-manifest/: index.html
python-api/: index.html
python-api/demo/: index.html
python-api/end-user/: index.html
python-api/extensions/: index.html
reference/cli/: index.html
reference/diagnostics/: index.html
reference/manifests/: index.html
reference/python-api/: index.html
scripts/: assemble_report.py  check.sh  check_google_docstrings.py  check_init_modules.py  ci.sh  code_metrics.py  quality_config.py  report_common.py  report_files.py  report_lint.py  report_metrics.py  report_tests.py  security_audit_deps.sh  security_audit_ignored_vulns.py
search/: search_index.json
src/scribpy/: __init__.py  __main__.py  _version.py  api.py  config.py  config_loader.py  errors.py  log.py  logging.py  rendering.py  validation.py
tests/: test_assembly.py  test_cli.py  test_collection_diagnostics.py  test_config.py  test_config_loader.py  test_diagram_renderer.py  test_document.py  test_errors.py  test_heading_normalizer.py  test_html_export.py  test_html_renderer.py  test_image_resolver.py  test_init.py  test_log.py  test_logging.py  test_manifest.py  test_markdown_collection.py  test_markdown_document.py  test_markdown_file.py  test_markdown_parser.py  test_mermaid.py  test_mermaid_web.py  test_mkdocs_export.py  test_offline_renderers.py  test_outline_parser.py  test_package.py  test_plantuml.py  test_plantuml_web.py  test_public_api.py  test_rendering.py  test_toc.py  test_toc_widget.py  test_validation.py  test_version.py
tests/assets/: test_copy.py  test_mermaid.py  test_plantuml.py
tests/builders/: test_html_single_page.py  test_html_site.py  test_markdown.py  test_pdf.py  test_pdf_assets.py
tests/cli/: test_reporting.py
tests/config/: test_config.py  test_html_config.py
tests/core/: test_build_html.py  test_build_project.py  test_demo.py  test_index_check.py  test_lint_project.py  test_parse_check.py  test_pipeline.py  test_project_pipeline.py
tests/extensions/: test_registry.py
tests/lint/: test_rules.py
tests/model/: test_core_models.py  test_diagnostic.py  test_protocols.py  test_results.py
tests/parser/: test_document.py  test_extractors.py  test_frontmatter.py  test_markdown.py
tests/plugins/: test_mermaid.py
tests/project/: test_indexer.py  test_scanner.py
tests/report/: test_assets.py  test_checksum.py  test_merge.py  test_nodes.py  test_numbering.py  test_renderer.py  test_toc.py
tests/transforms/: test_transforms.py
tests/utils/: __init__.py  test_diagnostics.py  test_file_utils.py  test_markdown_generator.py
work/: .coverage
work/reports/: flake8.json  flake8.json.sha256  format.json  format.json.sha256  lint-suppressions.json  lint-suppressions.json.sha256  metrics.json  metrics.json.sha256  pipeline.json  pipeline.json.sha256  ruff.json  ruff.json.sha256  security-code.json  security-code.json.sha256  security-deps.json  security-deps.json.sha256  (+8 more)
(+234 files in other folders)
