[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "scribpy"
dynamic = ["version"]
description = "Publish Markdown files to HTML or PDF."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Antoine Barré" }]
keywords = ["docs-as-code", "documentation", "markdown", "publishing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation",
    "Typing :: Typed",
]
dependencies = [
    "PyYAML>=6",
    "tomlkit>=0.13",
    "markdown-it-py>=3",
    "mkdocs>=1.6",
    "rich>=13",
    "typer>=0.16",
    "markdown-pdf>=1.13",
]

[project.urls]
Homepage = "https://github.com/antoinebarre/scribpy"
Repository = "https://github.com/antoinebarre/scribpy"
Issues = "https://github.com/antoinebarre/scribpy/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/scribpy"]

[tool.hatch.version]
source = "vcs"
tag-pattern = "^v(?P<version>.+)$"
fallback-version = "0.0.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short --cov=src/scribpy --cov-report=term-missing --cov-report=xml:work/coverage.xml --cov-report=html:work/htmlcov --junitxml=work/junit.xml"
pythonpath = ["src"]
cache_dir = "work/.pytest_cache"

[tool.coverage.run]
data_file = "work/.coverage"
source = ["src/scribpy"]
omit = [
    "src/scribpy/__init__.py",
    "src/scribpy/__main__.py",
    "src/scribpy/**/__init__.py",
]

[tool.coverage.report]
fail_under = 100
show_missing = true

[tool.coverage.html]
directory = "work/htmlcov"

[tool.coverage.xml]
output = "work/coverage.xml"

[tool.mypy]
strict = true
packages = ["scribpy"]
cache_dir = "work/.mypy_cache"

[tool.ruff]
cache-dir = "work/.ruff_cache"
line-length = 79

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915"]
ignore = ["E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pylint]
max-args = 8
max-branches = 12
max-returns = 6
max-statements = 50

[dependency-groups]
dev = [
    "yggtools>=1.1.3",
    "bandit>=1.8",
    "flake8>=7",
    "flake8-bugbear>=24",
    "flake8-docstrings>=1.7",
    "pep8-naming>=0.14",
    "pip-audit>=2.8",
    "pytest>=8",
    "pytest-cov>=6",
    "radon>=6",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-pyyaml>=6.0.12.20260408",
]
