[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scribpy"]

[project]
name = "scribpy"
version = "0.1.0"
description = "Assemble ordered Markdown collections into publishable Markdown, HTML, or MkDocs output."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "markdown>=3.6",
    "mkforge>=0.5.0",
    "pydantic>=2.13.4",
    "PyYAML>=6",
    "rich>=15.0.0",
]

[project.urls]
Documentation = "https://antoinebarre.github.io/scribpy/"
Repository = "https://github.com/antoinebarre/scribpy"
Issues = "https://github.com/antoinebarre/scribpy/issues"

[project.scripts]
scribpy = "scribpy.cli:cli"

[dependency-groups]
dev = [
    "bandit>=1.8",
    "flake8>=7",
    "flake8-bugbear>=24",
    "flake8-docstrings>=1.7",
    "flake8-pyproject>=1.2",
    "mypy>=1.10",
    "pep8-naming>=0.14",
    "pip-audit>=2.8",
    "pytest>=8",
    "pytest-cov>=6",
    "ruff>=0.4",
    "twine>=6",
    "types-markdown>=3.10.2.20260712",
    "types-PyYAML>=6",
    "yggtools>=1.2.0",
]
docs = [
    "mkdocs-material>=9.6",
    "plantuml-markdown>=3.11",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short --cov=src/scribpy --cov-report=term-missing --cov-fail-under=100"
pythonpath = ["src"]
cache_dir = "work/.pytest_cache"

[tool.coverage.run]
data_file = "work/.coverage"
source = ["src/scribpy"]


[tool.mypy]
strict = true
mypy_path = "src"
cache_dir = "work/.mypy_cache"


[tool.ruff]
cache-dir = "work/.ruff_cache"
line-length = 79

[tool.ruff.lint]
select = ["ALL"]
ignore = ["TC001", "TC002", "TC003", "TC004", "COM812", "TRY004"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "PLR2004", "S108", "PTH201", "EM101"]

[tool.ruff.lint.pydocstyle]
convention = "google"


[tool.flake8]
max-line-length = 79
max-complexity = 10
docstring-convention = "google"
count = true
show-source = true
statistics = true
extend-ignore = ["E203"]


[tool.bandit]
exclude_dirs = ["tests", "work", ".venv"]


[tool.yggtools.code_metrics]
paths = ["src/scribpy", "tests"]
exclude = []
max_cyclomatic_complexity = 10
max_module_logical_lines = 900
